src/app/modules/cms-panel-module/components/dashboard-user-details-panel/dashboard-user-details-panel.component.scss
/*!
 * Copyright (c) 2022 by MILOSZ GILGA <https://miloszgilga.pl> <https://github.com/Milosz08>
 * Silesian University of Technology | Politechnika Śląska
 *
 * File name | Nazwa pliku: dashboard-user-details-panel.component.scss
 * Last modified | Ostatnia modyfikacja: 02/06/2022, 23:21
 * Project name | Nazwa Projektu: angular-po-schedule-management-client
 *
 * Klient | Client: <https://github.com/Milosz08/Angular_PO_Schedule_Management_Client>
 * Serwer | Server: <https://github.com/Milosz08/ASP.NET_PO_Schedule_Management_Server>
 *
 * Client for the ASP.NET Core application to manage schedule for sample university. Written with the Angular Framework
 * for generating dynamic web applications. Project for the teaching course "Objected Oriented Programming".
 *
 * Klient dla aplikacji ASP.NET Core służącej do zarządzania planem zajęć uczelni. Napisany przy użyciu frameworka
 * Angular do generowania dynamicznych aplikacji webowych. Projekt wykonany na zajęcia "Programowanie
 * Obiektowe".
 */

.user-details__container {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
    margin-bottom: 40px;
    .user-details__image-with-data {
        display: flex;
        align-items: center;
        .user-details__image {
            width: 100px;
            height: 100px;
            font-size: 2.5rem;
            font-weight: 500;
        }
    }
}

.user-details__description {
    margin-left: 40px;
    .user-details__header-element {
        font-size: 2.1rem;
        font-weight: 500;
    }
    .user-details__paragraph {
        font-size: 1rem;
        strong {
            color: var(--darkBlueColor);
        }
        &.user-session--red-color strong {
            color: var(--darkRedColor);
        }
        &.paragraph--capitalised strong {
            text-transform: capitalize;
        }
    }
}

.user-details__change-image-containter {
    display: flex;
    flex-direction: column;
    justify-content: space-around;
    margin-left: 30px;
}

.user-additional-information__container {
    word-break: break-all;
    .user-additional-informations__elements {
        margin-top: 10px;
        p {
            margin: 5px 0;
        }
    }
}

.user-details__change-image-label {
    margin-bottom: 15px;
    .user-details__change-image-input {
        opacity: 0;
        position: absolute;
        z-index: -1;
    }
    .user-details__change-image-text {
        cursor: pointer;
        &.change-image-text--file-uploaded {
            border-bottom-right-radius: 0;
            border-bottom-left-radius: 0;
        }
    }
    .user-details__change-image-name-container {
        border-radius: var(--borderRadius);
        border: 1px solid var(--darkBlueColor);
        border-top: none;
        border-top-left-radius: 0;
        border-top-right-radius: 0;
        padding: 3px 10px;
        word-break: break-all;
    }
}

//----------------------------------------------------------------------------------------------------------------------

@media only screen and (max-width: 1634px) {
    .user-details__change-image-containter {
        flex-direction: row;
        width: 100%;
        margin: 30px 0 20px;
        :nth-of-type(1) {
            margin-right: 20px;
        }
    }
}

@media only screen and (max-width: 500px) {
    .user-details__image-with-data {
        flex-direction: column;
        width: 100%;
        .user-details__image {
            margin-bottom: 20px;
        }
    }
    .user-details__description {
        margin-left: 0;
    }
    .user-details__change-image-containter {
        flex-direction: column;
        margin: 20px 0;
        height: fit-content;
        button, .user-details__change-image-text {
            width: 100%;
        }
        :nth-of-type(1) {
            margin-right: 0;
        }
    }
}

